name:                skynet
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/bitemyapp/skynet#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
copyright:           2015, Chris Allen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable skynet
  ghc-options:         -O2 -threaded -rtsopts
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Chan
                       Parallel
                       MVar
  build-depends:       base >= 4.7 && < 5
                     , async
                     , criterion
                     , parallel
                     , stm
                     , time
                     , unagi-chan >= 0.4 && < 0.5
